# xdiff

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
cli/: Cargo.toml
cli-utils/: Cargo.toml
cli-utils/src/: lib.rs
cli/src/: main.rs
differ/: Cargo.toml
differ/examples/: config.rs
differ/src/: lib.rs
fixtures/: test.yaml
requester/: Cargo.toml
requester/fixtures/: diff.yml  req.yml
requester/src/: diff.rs  lib.rs  req.rs
xdiff/: Cargo.toml
xdiff/src/: main.rs
xreq/: Cargo.toml
xreq/src/: main.rs
