[package]
name = "xreq-cli-utils"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq-cli-utils"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
CLI utility functions.
"""
readme = "../README.md"
keywords = ["cli"]
categories = ["development-tools"]


[dependencies]
anyhow = "1.0.62"

xreq-lib = { version = "0.3.0", path = "../requester" }
