[package]
name = "api-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

differ = { version = "0.1.0", path = "../differ" }
serde_json = "1.0.85"
