[package]
name = "xreq-lib"
version = "0.3.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq-lib"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
xreq/xdiff common library.
"""
readme = "../README.md"
keywords = ["cli", "diff"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.62"
console = "0.15.1"
http = "0.2.8"
http-serde = "1.1.0"
reqwest = { version = "0.11.11", features = ["rustls-tls", "gzip", "brotli", "deflate", "json"], default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_qs = "0.10.1"
serde_with = "2.0.0"
serde_yaml = "0.9.10"
similar = { version = "2.2.0", features = ["inline", "bytes"] }
tokio = { version = "1.20.1", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
