[package]
name = "xreq-lib"
version = "0.4.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq-lib"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
xreq/xdiff common library.
"""
readme = "../README.md"
keywords = ["cli", "diff"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.94"
console = "0.15.8"
http = "1"
http-serde = "2"
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
  "json",
], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_qs = "0.13"
serde_with = "3"
serde_yaml = "0.9.34"
similar = { version = "2.6.0", features = ["inline", "bytes"] }
tokio = { version = "1.42.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
