[package]
name = "xdiff"
version = "0.4.3"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xdiff"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
A CLI to diff two requests based on predefined profiles.
"""
readme = "../README.md"
keywords = ["cli", "diff"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.62"
atty = "0.2.14"
clap = { version = "3.2.18", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["history", "completion"] }
tokio = { version = "1.20.1", features = ["full"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"

xreq-cli-utils = { version = "0.3.1", path = "../cli-utils" }
xreq-lib = { version = "0.4.1", path = "../requester" }
