[package]
name = "xdiff"
version = "0.4.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xdiff"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
A CLI to diff two requests based on predefined profiles.
"""
readme = "../README.md"
keywords = ["cli", "diff"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.94"
atty = "0.2.14"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["history", "completion"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"

xreq-cli-utils = { version = "0.3.2", path = "../cli-utils" }
xreq-lib = { version = "0.4.2", path = "../requester" }
