[package]
name = "xreq"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
xreq CLI
"""
readme = "../README.md"
keywords = ["cli", "http", "curl"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.62"
atty = "0.2.14"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
mime = "0.3.16"
serde_json = "1.0.85"
syntect = "4"
tokio = { version = "1.20.1", features = ["full"] }

xreq-cli-utils = { version = "0.2.0", path = "../cli-utils" }
xreq-lib = { version = "0.3.0", path = "../requester" }
