[package]
name = "xreq"
version = "0.4.3"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
A CLI to send complicated request based on predefined profiles.
"""
readme = "../README.md"
keywords = ["cli", "http", "curl"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.62"
atty = "0.2.14"
clap = { version = "3.2.18", features = ["derive"] }
colored = "2.0.0"
dialoguer = { version = "0.10.2", features = ["history", "completion"] }
mime = "0.3.16"
serde_json = "1.0.85"
serde_yaml = "0.9.10"
tokio = { version = "1.20.1", features = ["full"] }

xreq-cli-utils = { version = "0.3.1", path = "../cli-utils" }
xreq-lib = { version = "0.4.1", path = "../requester" }
