[package]
name = "xreq"
version = "0.4.4"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/xreq"
repository = "https://github.com/Tubitv/xdiff"
homepage = "https://github.com/Tubitv/xdiff"
description = """
A CLI to send complicated request based on predefined profiles.
"""
readme = "../README.md"
keywords = ["cli", "http", "curl"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.94"
atty = "0.2.14"
clap = { version = "4", features = ["derive"] }
colored = "2.1.0"
dialoguer = { version = "0.11", features = ["history", "completion"] }
mime = "0.3.17"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }

xreq-cli-utils = { version = "0.3.2", path = "../cli-utils" }
xreq-lib = { version = "0.4.2", path = "../requester" }
